# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set files variable ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${FLOW_SOURCE_DIR}/src/flow/api)
set(include_root ${FLOW_SOURCE_DIR}/include/flow/api)

set(sources
        ${source_root}/file_format.cpp
        ${source_root}/project.cpp
        ${source_root}/project_format.cpp
        ${source_root}/document.cpp
        ${source_root}/flow_document_format.cpp)

set(includes
        ${include_root}/export.h
        ${include_root}/file_format.h
        ${include_root}/project.h
        ${include_root}/project_format.h
        ${include_root}/document.h
        ${include_root}/document_format.h
        ${include_root}/flow_document_format.h)
# -------------------------------------------------------------------------------------------------- #
# ---------------------------------- Qt libraries configuration ------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Find external libraries -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
find_package(Qt6 REQUIRED COMPONENTS Widgets)
# -------------------------------------------------------------------------------------------------- #
# ------------------------------------ Create utils shared lib ------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
flow_add_module(api
        SOURCES ${sources} ${includes}
        DEPENDS_PRIVATE Qt6::Widgets)
# -------------------------------------------------------------------------------------------------- #
