# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Add subdirectories ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
add_subdirectory(pointer_cast)
add_subdirectory(qtdialog)
add_subdirectory(qtdpi)
add_subdirectory(qtfilesystemwatcher)
add_subdirectory(qtlineedit)
add_subdirectory(qtpropertybrowser)
add_subdirectory(qtview)
add_subdirectory(qtzip)
# -------------------------------------------------------------------------------------------------- #
