# ----------------------------------------------------------------------- # #
# -------------------------------------- Set CMake Version
# ----------------------------------------- #
# ----------------------------------------------------------------------- # #
cmake_minimum_required(VERSION 3.11)
# ----------------------------------------------------------------------- # #
# -------------------------------------- Add subdirectories
# ---------------------------------------- #
# ----------------------------------------------------------------------- # #
add_subdirectory(pointer_cast)
add_subdirectory(qt)
# ----------------------------------------------------------------------- # #
